<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_hint"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"/>

    <CheckBox
        android:id="@+id/dialog_delete_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_check"
        android:checked="true"
        android:textSize="15sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/dialog_delete_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/dialog_delete_hint_delete"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/dialog_delete_cancel"
            android:layout_toStartOf="@id/dialog_delete_accept"
            android:layout_marginEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_delete_hint_cancel"
            android:textAllCaps="false"
            />

    </RelativeLayout>

</LinearLayout>