<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="10dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/chat_display_profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:siBorderWidth="1dp"
        app:siBorderColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.github.siyamed.shapeimageview.CircularImageView>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chat_display_profile_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chat_display_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:textSize="17sp"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat_display_profile_name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/request_display_accept"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginEnd="20dp"
                android:text="@string/request_accept"
                android:textColor="@color/colorAcceptButton"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/request__display_cancel"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:text="@string/request_cancel"
                android:textColor="@color/colorCancelButton"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/request_display_cancel_my_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat_display_profile_name"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/request_cancel_my_request"
            android:textColor="@color/colorCancelButton"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>