<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activity.SettingsNewAccountActivity">

    <include android:id="@+id/settings_new_account_toolbar"
        layout="@layout/toolbar_main"/>

    <com.github.siyamed.shapeimageview.CircularImageView
        android:layout_below="@id/settings_new_account_toolbar"
        android:id="@+id/setting_new_account_user_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/profile_image"
        android:layout_marginTop="20sp"
        app:siBorderWidth="1dp"
        app:siBorderColor="@android:color/white"
        android:layout_centerHorizontal="true">
    </com.github.siyamed.shapeimageview.CircularImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_new_user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_new_account_user_image"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/setting_hint_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@android:color/black"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_new_account_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:padding="15dp"
            android:background="@null"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_new_user_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_new_user_name_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/setting_hint_status"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@android:color/black"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_new_account_user_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:padding="15dp"
            android:background="@null"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/setting_new_account_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_new_user_status_layout"
        android:layout_marginTop="15dp"
        android:text="@string/new_account_apply"
        android:textColor="@android:color/white"
        android:background="@drawable/background_accept_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:padding="16dp">
    </Button>

</RelativeLayout>